--- a/src/CommunityToolkit/Directory.build.props
+++ b/src/CommunityToolkit/Directory.build.props
@@ -20,6 +20,7 @@
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <PackageProjectUrl>https://github.com/xamarin/XamarinCommunityToolkit</PackageProjectUrl>
         <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+        <Version>1.3.0-pre2</Version>
     </PropertyGroup>    
 
     <ItemGroup>
