All files but Pages

--- a/samples/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample.csproj
+++ b/samples/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample.csproj
@@ -2,12 +2,13 @@
 
 	<PropertyGroup>
 		<!-- iOS, Android, MacCatalyst -->
-		<TargetFrameworks>net6.0-ios;net6.0-android;net6.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net6.0-ios;net6.0-android;</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<RootNamespace>XCT.MauiCompat.Sample</RootNamespace>
     <LangVersion>preview</LangVersion>
+    <Nullable>enable</Nullable>
 
 		<!-- Display name -->
 		<ApplicationTitle>XCT.MauiCompat.Sample</ApplicationTitle>
@@ -22,11 +23,7 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiImage
-			Include="Resources\appicon.svg"
-			ForegroundFile="Resources\appiconfg.svg"
-			IsAppIcon="true"
-			Color="#512BD4" />
+		<MauiImage Include="Resources\appicon.svg" ForegroundFile="Resources\appiconfg.svg" IsAppIcon="true" Color="#512BD4" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\appiconfg.svg" Color="#512BD4" />
@@ -36,6 +33,22 @@
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-ios'">
+	  <PackageReference Include="Xamarin.CommunityToolkit.MauiCompat">
+	    <Version>1.3.0-pre2</Version>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-android'">
+	  <PackageReference Include="Xamarin.CommunityToolkit.MauiCompat">
+	    <Version>1.3.0-pre2</Version>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Octokit" Version="0.50.0" />
 	</ItemGroup>
 
 	<PropertyGroup>
