--- a/samples/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample.csproj
+++ b/samples/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample/XCT.MauiCompat.Sample.csproj
@@ -75,4 +75,8 @@
 	  <_MauiXamlToRemove Remove="App\Resx\**" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\src\CommunityToolkit\Xamarin.CommunityToolkit.MauiCompat\Xamarin.CommunityToolkit.MauiCompat.csproj" />
+	</ItemGroup>
+
 </Project>
